Implemented EF core entities and created a database with the Code-First approach using EF core with MS SQL. Implemented data access logic using the repository and UnitOfWork patterns.

--- a/HealthCare020.API/appsettings.json
+++ b/HealthCare020.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HealthCare020DB": "Server=.;Database=HealthCare020;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
