--- a/HealthCare020.API/appsettings.json
+++ b/HealthCare020.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HealthCare020DB": "Server=.;Database=HealthCare020;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=192.168.100.18\\MSSQLSERVER,1433;Database=HealthCare020;User=fahirmdz;Password=slusketine123;"
   }
 }
