--- a/HealthCare020.API/HealthCare020.API.csproj
+++ b/HealthCare020.API/HealthCare020.API.csproj
@@ -28,5 +28,9 @@
     <ProjectReference Include="..\HealthCare020.Services\HealthCare020.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ResourceParameters\" />
+  </ItemGroup>
+
 
 </Project>
