Implemented PATCH ops and applied to all controllers to provide clients possibility of partial entity update

--- a/HealthCare020.API/Properties/launchSettings.json
+++ b/HealthCare020.API/Properties/launchSettings.json
@@ -16,15 +16,14 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "HealthCare020.API": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
