Implemented UI and methods for Login page on WinUI

--- a/Healthcare020.WinUI/App.config
+++ b/Healthcare020.WinUI/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Healthcare020.WinUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -23,4 +28,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Healthcare020.WinUI.Properties.Settings>
+      <setting name="ApiUrl" serializeAs="String">
+        <value>https://localhost:5001/api/</value>
+      </setting>
+      <setting name="IdpTokenEndpoint" serializeAs="String">
+        <value>https://localhost:5005/connect/token</value>
+      </setting>
+      <setting name="IdpClientId" serializeAs="String">
+        <value>Healthcare020_WebAPI</value>
+      </setting>
+      <setting name="IdpClientSecret" serializeAs="String">
+        <value>devsecret</value>
+      </setting>
+    </Healthcare020.WinUI.Properties.Settings>
+  </userSettings>
 </configuration>
