--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -42,6 +42,9 @@
     <Reference Include="IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=e7877f4675df049f, processorArchitecture=MSIL">
       <HintPath>..\packages\IdentityModel.4.0.0\lib\net461\IdentityModel.dll</HintPath>
     </Reference>
+    <Reference Include="JTextBox">
+      <HintPath>D:\Downloads\JTextBox.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.IdentityModel.JsonWebTokens, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IdentityModel.JsonWebTokens.5.6.0\lib\net461\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
     </Reference>
@@ -102,6 +105,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomElements\Button_WOC.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Gradovi\frmGradoviPrikaz.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +116,7 @@
     </Compile>
     <Compile Include="Helpers\Auth.cs" />
     <Compile Include="Helpers\DynamicTypesExntesions.cs" />
+    <Compile Include="Helpers\StyleExtensions.cs" />
     <Compile Include="KorisnickiNalog\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +131,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\APIService.cs" />
     <Compile Include="StartMenu\frmStartMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,7 +161,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Compile Include="Properties\Settings.Designer.cs">
