--- a/Healthcare020.WinUI/packages.config
+++ b/Healthcare020.WinUI/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Flurl" version="2.8.2" targetFramework="net472" />
   <package id="Flurl.Http" version="2.4.2" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="5.12.1" targetFramework="net472" />
   <package id="IdentityModel" version="4.0.0" targetFramework="net472" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
