--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -88,6 +88,10 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ComponentModel.Annotations.4.7.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.IdentityModel.Services" />
@@ -123,6 +127,12 @@
     <Compile Include="CustomElements\Button_WOC.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CustomElements\UserMenuButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomElements\UserMenuDropdown.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Gradovi\frmGradoviPrikaz.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +155,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainFormContainer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFormContainer.Designer.cs">
+      <DependentUpon>MainFormContainer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\APIService.cs" />
@@ -165,6 +181,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainFormContainer.resx">
+      <DependentUpon>MainFormContainer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
