--- a/Healthcare020.WinUI/packages.config
+++ b/Healthcare020.WinUI/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="Thinktecture.IdentityModel" version="3.6.1" targetFramework="net472" />
