Implemented paginated displaying of Users on the Admin dashboard.

--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -161,6 +161,7 @@
     <Compile Include="MainFormContainer.Designer.cs">
       <DependentUpon>MainFormContainer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\APIServiceResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\APIService.cs" />
