--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -169,6 +169,12 @@
     </Compile>
     <Compile Include="Helpers\Auth.cs" />
     <Compile Include="Helpers\ConnectionCheck.cs" />
+    <Compile Include="Helpers\Dialogs\dlgSuccess.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Helpers\Dialogs\dlgSuccess.Designer.cs">
+      <DependentUpon>dlgSuccess.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\DynamicTypesExntesions.cs" />
     <Compile Include="Helpers\FormExtensions.cs" />
     <Compile Include="Helpers\StyleExtensions.cs" />
@@ -211,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Gradovi\frmGradoviPrikaz.resx">
       <DependentUpon>frmGradoviPrikaz.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Helpers\Dialogs\dlgSuccess.resx">
+      <DependentUpon>dlgSuccess.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KorisnickiNalog\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
