Updated .gitignore and improved access token store

--- a/HealthCare020.API/HealthCare020.API.csproj
+++ b/HealthCare020.API/HealthCare020.API.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HealthCare020.Core\HealthCare020.Core.csproj" />
     <ProjectReference Include="..\HealthCare020.Services\HealthCare020.Services.csproj" />
   </ItemGroup>
 
