Added one more constraint in ZahtevZaPregled service, Insert and Update methods

--- a/HealthCare020.Services/HealthCare020.Services.csproj
+++ b/HealthCare020.Services/HealthCare020.Services.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\HealthCare020.Repository\HealthCare020.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
