New form named frmNewGrad, for adding new Grad in DB

--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -145,11 +145,23 @@
     <Compile Include="Forms\AdminDashboard\PredefinedData\frmDrzave.Designer.cs">
       <DependentUpon>frmDrzave.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AdminDashboard\PredefinedData\frmGradovi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminDashboard\PredefinedData\frmGradovi.Designer.cs">
+      <DependentUpon>frmGradovi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AdminDashboard\PredefinedData\frmNewDrzava.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\AdminDashboard\PredefinedData\frmNewDrzava.Designer.cs">
       <DependentUpon>frmNewDrzava.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AdminDashboard\PredefinedData\frmNewGrad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AdminDashboard\PredefinedData\frmNewGrad.Designer.cs">
+      <DependentUpon>frmNewGrad.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\DisplayDataForm.cs">
       <SubType>Form</SubType>
@@ -249,8 +261,14 @@
     <EmbeddedResource Include="Forms\AdminDashboard\PredefinedData\frmDrzave.resx">
       <DependentUpon>frmDrzave.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AdminDashboard\PredefinedData\frmGradovi.resx">
+      <DependentUpon>frmGradovi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AdminDashboard\PredefinedData\frmNewDrzava.resx">
       <DependentUpon>frmNewDrzava.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AdminDashboard\PredefinedData\frmNewGrad.resx">
+      <DependentUpon>frmNewGrad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DisplayDataForm.resx">
       <DependentUpon>DisplayDataForm.cs</DependentUpon>
